# PyAMI

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
docs/: CONTRIBUTING.md
docs/source/: conf.py
pyibisami/: __init__.py  ami_config.py  ami_model.py  ami_parse.py  ibis_file.py  ibis_model.py  ibis_parser.py  run_tests.py
pyibisami/ami/: __init__.py  ami.py  configurator.py  parameter.py  parser.py
pyibisami/ibis/: __init__.py  ibis.py  model.py  parser.py
pyibisami/tools/: ami_generator.py  generic.ami.em  run_tests.py
src/pyibisami/: __init__.py  common.py  debug.py  utils.py
src/pyibisami/ami/: __init__.py  ami.py  config.py  configurator.py  gui.py  model.py  parameter.py  parser.py  reserved.py  reserved_parameter_names.py
src/pyibisami/ibis/: __init__.py  buffer_model.py  component.py  gui.py  ibis.py  items.py  mappings.py  model.py  package.py  parser.py  pin.py
src/pyibisami/tools/: run_notebook.py  run_tests.py
tests/: conftest.py  test_ami_config.py  test_ami_configurator.py  test_ami_model.py  test_ami_parameter.py  test_ami_parse.py  test_models.py  test_run_tests.py  test_utils.py
tests/ami/: test_config.py  test_configurator.py  test_external_ami_files.py  test_external_files.py  test_model.py  test_parser.py
tests/examples/: example_tx.py
tests/ibis/: test_external_files.py  test_external_ibis_files.py  test_items.py  test_parser.py
