[metadata]
description = "Facilitates working directly with IBIS-AMI DLLs from the Python command prompt."
url = "https://github.com/capn-freako/PyAMI/wiki"
author = "David Banas"
author_email = "capn.freako@gmail.com"
keywords = "ibis-ami"
classifiers =
    "Development Status :: 3 - Alpha"
    "Environment :: Console"
    "Intended Audience :: Developers"
    "License :: OSI Approved :: BSD License"
    "Operating System :: OS Independent"
    "Programming Language :: Python"
    "Programming Language :: Python :: 3.6"
    "Programming Language :: Python :: 3.7"
    "Programming Language :: Python :: Implementation :: PyPy"
    "Topic :: System :: Emulators"
    "Topic :: Utilities"
